--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -76,7 +76,7 @@
           <div class="col-md-6 align-self-center">
              <div class="aboutDCC_wrap">
                 <div class="dccSubTitle f-w-B opacity-5 mrg-b-60 text-uppercase">
-                  {{homepage.servicesection.smallheading}}
+                   SERVICES
                 </div>
                 <div class="mrg-b-30 ">
                    <h2 class="f-w-B headingSec line_H_1"> Our Service Is To <br> Make Every Animal <br> Lover Happy    </h2>
@@ -236,7 +236,7 @@
           <div class="col-md-6">
              <div class="team-wrap">
                 <div class="img-1">
-                   <img [src]="./assets/images/team.jpg" class="w-100" alt="Team DCC" />
+                   <img src="./assets/images/team.jpg" class="w-100" alt="Team DCC" />
                    <div class="content-wrap">
                       <div class="row no-gutters">
                          <div class="col-auto">
