--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -236,7 +236,7 @@
           <div class="col-md-6">
              <div class="team-wrap">
                 <div class="img-1">
-                   <img [src]="./assets/images/team.jpg" class="w-100" alt="Team DCC" />
+                   <img src="./assets/images/team.jpg" class="w-100" alt="Team DCC" />
                    <div class="content-wrap">
                       <div class="row no-gutters">
                          <div class="col-auto">
