--- a/src/assets/css/stylesheet.css
+++ b/src/assets/css/stylesheet.css
@@ -366,6 +366,14 @@ border-radius: 0.571vw;
 -moz-box-shadow: 0px 0px 40px 0px rgba(0,0,0,0.1);
 box-shadow: 0px 0px 40px 0px rgb(0 0 0 / 10%);}
 
+/* Team Page CSS*/
+.teamPage_wrap img {
+    border-radius: 0.571vw;
+}
+.teamTxt p
+{
+    font-size: 1.286vw;
+}
 
 @keyframes smoothScroll{0%{transform:translateY(-40px);-ms-transform:translateY(-40px);-o-transform:translateY(-40px)}
 100%{transform:translateY(0);-ms-transform:translateY(0);-o-transform:translateY(0)}
