--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -76,44 +76,29 @@
           <div class="col-md-6 align-self-center">
              <div class="aboutDCC_wrap">
                 <div class="dccSubTitle f-w-B opacity-5 mrg-b-60 text-uppercase">
-                   SERVICES
+                   {{homepage.servicesection.smallheading}}
                 </div>
                 <div class="mrg-b-30 ">
-                   <h2 class="f-w-B headingSec line_H_1"> Our Service Is To <br> Make Every Animal <br> Lover Happy    </h2>
+                   <h2 class="f-w-B headingSec line_H_1" [innerHTML]="serviceheading"></h2>
                 </div>
                 <div class="hrLine mrg-b-30"></div>
                 <div class="bannerTxt mrg-b-30">
-                   <p> We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us once and we will become friends. </p>
+                   <p [innerHTML]="servicesectionContent"></p>
                 </div>
-                <div class="serviceList_sec mrg-b-60">
+                <div class="serviceList_sec mrg-b-60" *ngIf="services">
                    <ul class="mb-0 serviceSec">
-                      <li class="service-item"> <a href="#" class="serviceLink transtn-1"> Consultation </a> </li>
-                      <li class="service-item"> <a href="#" class="serviceLink transtn-1"> OPD </a> </li>
-                      <li class="service-item"> <a href="#" class="serviceLink transtn-1"> Surgery </a> </li>
-                      <li class="service-item"> <a href="#" class="serviceLink transtn-1"> Radiography </a> </li>
-                      <li class="service-item"> <a href="#" class="serviceLink transtn-1"> Ultrasonography </a> </li>
-                      <li class="service-item"> <a href="#" class="serviceLink transtn-1"> Dentistry </a> </li>
-                      <li class="service-item"> <a href="#" class="serviceLink transtn-1"> Ophthalmology </a> </li>
-                      <li class="service-item"> <a href="#" class="serviceLink transtn-1"> ENT </a> </li>
-                      <li class="service-item"> <a href="#" class="serviceLink transtn-1"> Vaccination </a> </li>
-                      <li class="service-item"> <a href="#" class="serviceLink transtn-1"> Pathology </a> </li>
-                      <li class="service-item"> <a href="#" class="serviceLink transtn-1"> ICU </a> </li>
-                      <li class="service-item"> <a href="#" class="serviceLink transtn-1"> Boarding </a> </li>
-                      <li class="service-item"> <a href="#" class="serviceLink transtn-1"> Grooming </a> </li>
-                      <li class="service-item"> <a href="#" class="serviceLink transtn-1"> Daycare </a> </li>
-                      <li class="service-item"> <a href="#" class="serviceLink transtn-1"> Activities </a> </li>
-                      <li class="service-item"> <a href="#" class="serviceLink transtn-1"> Cardiology </a> </li>
+                      <li class="service-item" *ngFor="let service of services"> <a href="#" class="serviceLink transtn-1"> {{service.name}} </a> </li>                     
                    </ul>
                 </div>
                 <div class="btnSec">
                    <div class="btnSec_wra d-inline">
                       <a href="#" class="pagebtn f-w-B">
-                      All Services
+                     {{homepage.servicesection.button_1_text}}
                       </a>
                    </div>
                    <div class="btnSec_wra d-inline">
                       <a href="#" class="pagebtn pagebtnblue f-w-B">
-                      Book an appointment
+                        {{homepage.servicesection.button_2_text}}
                       </a>
                    </div>
                 </div>
@@ -121,87 +106,17 @@
           </div>
           <div class="col-md-6">
              <div class="servicebox_sec">
-                <div class="row rowSpace">
-                   <div class="col-md-6">
-                      <div class="serviceBx bx-shadow text-center">
-                         <div class="service_iconSec">
-                            <img src="./assets/images/service-icon-1.svg" class="w-100" alt="Vacation Boarding">
-                         </div>
-                         <div class="serviceTxt f-w-B line_H_1">
-                            Vacation Boarding
-                         </div>
-                      </div>
-                   </div>
-                   <div class="col-md-6">
-                      <div class="serviceBx bx-shadow text-center">
-                         <div class="service_iconSec">
-                            <img src="./assets/images/service-icon-2.svg" class="w-100" alt="Vacation Boarding">
-                         </div>
-                         <div class="serviceTxt f-w-B line_H_1">
-                            Dentistry
-                         </div>
-                      </div>
-                   </div>
-                   <div class="col-md-6">
-                      <div class="serviceBx bx-shadow text-center">
-                         <div class="service_iconSec">
-                            <img src="./assets/images/service-icon-3.svg" class="w-100" alt="Vacation Boarding">
-                         </div>
-                         <div class="serviceTxt f-w-B line_H_1">
-                            OPD
-                         </div>
-                      </div>
-                   </div>
-                   <div class="col-md-6">
-                      <div class="serviceBx bx-shadow text-center">
-                         <div class="service_iconSec">
-                            <img src="./assets/images/service-icon-4.svg" class="w-100" alt="Vacation Boarding">
-                         </div>
-                         <div class="serviceTxt f-w-B line_H_1">
-                            Cardiology
-                         </div>
-                      </div>
-                   </div>
-                   <div class="col-md-6">
-                      <div class="serviceBx bx-shadow text-center">
-                         <div class="service_iconSec">
-                            <img src="./assets/images/service-icon-1.svg" class="w-100" alt="Vacation Boarding">
-                         </div>
-                         <div class="serviceTxt f-w-B line_H_1">
-                            Vacation Boarding
-                         </div>
-                      </div>
-                   </div>
-                   <div class="col-md-6">
-                      <div class="serviceBx bx-shadow text-center">
-                         <div class="service_iconSec">
-                            <img src="./assets/images/service-icon-2.svg" class="w-100" alt="Vacation Boarding">
-                         </div>
-                         <div class="serviceTxt f-w-B line_H_1">
-                            Dentistry
-                         </div>
-                      </div>
-                   </div>
-                   <div class="col-md-6">
-                      <div class="serviceBx bx-shadow text-center">
-                         <div class="service_iconSec">
-                            <img src="./assets/images/service-icon-3.svg" class="w-100" alt="Vacation Boarding">
-                         </div>
-                         <div class="serviceTxt f-w-B line_H_1">
-                            OPD
-                         </div>
-                      </div>
-                   </div>
-                   <div class="col-md-6">
-                      <div class="serviceBx bx-shadow text-center">
-                         <div class="service_iconSec">
-                            <img src="./assets/images/service-icon-4.svg" class="w-100" alt="Vacation Boarding">
-                         </div>
-                         <div class="serviceTxt f-w-B line_H_1">
-                            Cardiology
-                         </div>
-                      </div>
-                   </div>
+                <div class="row rowSpace" *ngIf="serviceList.length > 0">               
+                     <div class="col-md-6" *ngFor="let data of serviceList">
+                        <div class="serviceBx bx-shadow text-center">
+                           <div class="service_iconSec">
+                              <img [src]="data.icon.link" class="w-100" [alt]="data.icon.alt">
+                           </div>
+                           <div class="serviceTxt f-w-B line_H_1">
+                              {{data.name}}
+                           </div>
+                        </div>
+                     </div>           
                 </div>
              </div>
           </div>
@@ -223,8 +138,7 @@
                    <h2 class="f-w-B headingSec line_H_1"> {{homepage.teamsection.heading}} </h2>
                 </div>
                 <div class="hrLine mrg-b-30"></div>
-                <div class="bannerTxt" [innerHTML]="teamsectionContent">
-                   <!-- <p> {{homepage.teamsection.content}} </p> -->
+                <div class="bannerTxt" [innerHTML]="teamsectionContent">             
                 </div>
                 <div class="btnSec">
                    <a [href]="homepage.teamsection.button_link" class="pagebtn f-w-B">
@@ -234,30 +148,30 @@
              </div>
           </div>
           <div class="col-md-6">
-             <div class="team-wrap">
+             <div class="team-wrap" *ngIf="homepage.teamsection.team.length > 0">
                 <div class="img-1">
-                   <img src="./assets/images/team.jpg" class="w-100" alt="Team DCC" />
+                   <img src="{{homepage.teamsection.team[0].image.link}}" class="w-100" alt="{{homepage.teamsection.team[0].image.alt}}" />
                    <div class="content-wrap">
                       <div class="row no-gutters">
                          <div class="col-auto">
                             <div class="user-img"><img src="./assets/images/user-icon.svg" alt="icon" /></div>
                          </div>
                          <div class="col">
-                            <div class="user-name">Dr. Vinood Sharma</div>
+                            <div class="user-name">{{homepage.teamsection.team[0].name}}</div>
                             <div class="user-live">Available now</div>
                          </div>
                       </div>
                    </div>
                 </div>
                 <div class="img-2">
-                   <img src="./assets/images/team.jpg" class="w-100" alt="Team DCC" />
+                   <img src="{{homepage.teamsection.team[1].image.link}}" class="w-100" alt="{{homepage.teamsection.team[1].image.alt}}" />
                    <div class="content-wrap">
                       <div class="row no-gutters">
                          <div class="col-auto">
                             <div class="user-img"><img src="./assets/images/user-icon.svg" alt="icon" /></div>
                          </div>
                          <div class="col">
-                            <div class="user-name">Dr. Vinood Sharma</div>
+                            <div class="user-name">{{homepage.teamsection.team[1].name}}</div>
                             <div class="user-live">Available now</div>
                          </div>
                       </div>
@@ -277,65 +191,30 @@
           <div class="col-md-6 align-self-center">
              <div class="aboutDCC_wrap">
                 <div class="dccSubTitle f-w-B opacity-5 mrg-b-60 text-uppercase">
-                   Pet Health
+                   {{homepage.pethealthsection.smallheading}}
                 </div>
                 <div class="mrg-b-3 ">
-                   <h2 class="f-w-B headingSec line_H_1"> Our Aim Is To <br /> Educate Every Animal Lover </h2>
+                   <h2 class="f-w-B headingSec line_H_1" [innerHTML]="pethealthheading"></h2>
                 </div>
                 <div class="hrLine mrg-b-30"></div>
                 <div class="bannerTxt mrg-b-30">
-                   <p> We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us once and we will become friends. </p>
+                   <p [innerHTML]="pethealthsectionContent"></p>
                 </div>
              </div>
           </div>
        </div>
-       <div class="row">
-          <div class="col-sm-6 col-md-4">
+       <div class="row" >
+          <div class="col-sm-6 col-md-4" *ngFor="let blog of homepage.pethealthsection.blogs;">
              <div class="pethealth-box">
-                <div class="img-wrap"><img src="./assets/images/ref.jpg" class="w-100" alt="" /></div>
-                <div class="detail">Medicine <span>Aug 6, 2021 </span></div>
-                <div class="title">Medicine for deworming</div>
+                <div class="img-wrap"><img [src]="blog.image.link" class="w-100" [alt]="blog.image.alt"/></div>
+                <div class="detail">{{blog.category}} <span>{{blog.date}}</span></div>
+                <div class="title">{{blog.category}}</div>
              </div>
-          </div>
-          <div class="col-sm-6 col-md-4">
-             <div class="pethealth-box">
-                <div class="img-wrap"><img src="./assets/images/ref.jpg" class="w-100" alt="" /></div>
-                <div class="detail">Medicine <span>Aug 6, 2021 </span></div>
-                <div class="title">Medicine for deworming</div>
-             </div>
-          </div>
-          <div class="col-sm-6 col-md-4">
-             <div class="pethealth-box">
-                <div class="img-wrap"><img src="./assets/images/ref.jpg" class="w-100" alt="" /></div>
-                <div class="detail">Medicine <span>Aug 6, 2021 </span></div>
-                <div class="title">Medicine for deworming</div>
-             </div>
-          </div>
-          <div class="col-sm-6 col-md-4">
-             <div class="pethealth-box">
-                <div class="img-wrap"><img src="./assets/images/ref.jpg" class="w-100" alt="" /></div>
-                <div class="detail">Medicine <span>Aug 6, 2021 </span></div>
-                <div class="title">Medicine for deworming</div>
-             </div>
-          </div>
-          <div class="col-sm-6 col-md-4">
-             <div class="pethealth-box">
-                <div class="img-wrap"><img src="./assets/images/ref.jpg" class="w-100" alt="" /></div>
-                <div class="detail">Medicine <span>Aug 6, 2021 </span></div>
-                <div class="title">Medicine for deworming</div>
-             </div>
-          </div>
-          <div class="col-sm-6 col-md-4">
-             <div class="pethealth-box">
-                <div class="img-wrap"><img src="./assets/images/ref.jpg" class="w-100" alt="" /></div>
-                <div class="detail">Medicine <span>Aug 6, 2021 </span></div>
-                <div class="title">Medicine for deworming</div>
-             </div>
-          </div>
+          </div>         
        </div>
        <div class="btnSec">
           <a href="#" class="pagebtn f-w-B">
-          More blogs
+         {{homepage.pethealthsection.button_text}}
           </a>
        </div>
     </div>
@@ -352,22 +231,22 @@
                    
                 </div>
                 <div class="mrg-b-30 ">
-                   <h2 class="f-w-B headingSec line_H_1"> Our Intent Is To be <br /> Available At Anytime Of The Day</h2>
+                   <h2 class="f-w-B headingSec line_H_1" [innerHTML]="ourintentheading"></h2>
                 </div>
                 <div class="hrLine mrg-b-30"></div>
                 <div class="bannerTxt">
-                   <p> Download our mobile application on App Store & Playstore <br /> and keep your animal healthy. </p>
+                   <p [innerHTML]="footersectionContent"></p>
                 </div>
-                <div class="btnSec">
+                <!-- <div class="btnSec">
                    <a href="#" class="pagebtn f-w-B">
                    Meet Our Doctors
                    </a>
-                </div>
+                </div> -->
              </div>
           </div>
           <div class="col-md-2 text-right">
-             <div class="app-store"><img src="./assets/images/app-store.svg" alt="app store" /></div>
-             <div class="google-play"><img src="./assets/images/google-play.svg" alt="app store" /></div>
+             <div class="app-store"><img src="{{homepage.footersection.app_store_image.link}}" alt="{{homepage.footersection.app_store_image.alt}}" /></div>
+             <div class="google-play"><img src="{{homepage.footersection.play_store_image.link}}" alt="{{homepage.footersection.play_store_image.alt}}" /></div>
           </div>
        </div>
     </div>
