--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -92,12 +92,12 @@
                 </div>
                 <div class="btnSec">
                    <div class="btnSec_wra d-inline">
-                      <a href="#" class="pagebtn f-w-B">
+                      <a [href]="homepage.servicesection.button_1_link" class="pagebtn f-w-B">
                      {{homepage.servicesection.button_1_text}}
                       </a>
                    </div>
                    <div class="btnSec_wra d-inline">
-                      <a href="#" class="pagebtn pagebtnblue f-w-B">
+                      <a [href]="homepage.servicesection.button_2_link" class="pagebtn pagebtnblue f-w-B">
                         {{homepage.servicesection.button_2_text}}
                       </a>
                    </div>
@@ -213,7 +213,7 @@
           </div>         
        </div>
        <div class="btnSec">
-          <a href="#" class="pagebtn f-w-B">
+          <a [href]="homepage.pethealthsection.button_link" class="pagebtn f-w-B">
          {{homepage.pethealthsection.button_text}}
           </a>
        </div>
