--- a/src/app/components/ourteam/ourteam.component.html
+++ b/src/app/components/ourteam/ourteam.component.html
@@ -1,134 +1,114 @@
 <div class="dc_pg_spcHead">
 
-   
+<div class="main-container">
+<div class="dc_pgHead_wrap text-center" style="background-image:url(/assets/images/head-bg.jpg);">
+<h1 class="dc_pg_title">Our Team</h1>
+<ol class="breadcrumb dc_cstBread f-w-B justify-content-center">
+    <li class="breadcrumb-item"><a href="#">Home</a></li>
+    <li class="breadcrumb-item active">Our Team</li>
+  </ol>
+</div>
 
-    <div class="main-container">
-      <div class="dc_pgHead_wrap text-center" style="background-image:url(./assets/images/head-bg.jpg);">
-        <h1 class="dc_pg_title">Our Team</h1>
-        <ol class="breadcrumb dc_cstBread f-w-B justify-content-center">
-          <li class="breadcrumb-item"><a href="#">Home</a></li>
-          <li class="breadcrumb-item active">Our Team</li>
-        </ol>
-      </div>
-
-    </div>
+</div>
 
 
 
-    <div class="dc_spacer_t_90 dc_spacer_b_60">
-      <div class="main-container">
-        <div class="row row_gutter_30">
-          <div class="col-md-6">
-            <div class="dc_About_media_wrap">
-              <ul class="list-unstyled row row_gutter_15 dc_wrapCols_UD">
-                <li class="col-6">
-                  <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="./assets/images/about-img-1.jpg" alt="" /></div>
-                </li>
-                <li class="col-6">
-                  <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="./assets/images/about-img-2.jpg" alt="" /></div>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="dc_txtSummary">
-              <h2 class="headingSec line_H_1 mrg-b-30">With Over 30 Years Of Global Experience</h2>
-              <div class="dc_txt_summary dc_last_p">
-                <p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four
-                  legged animal to visit us onceand we will become friends.</p>
-                <p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four
-                  legged animal to visit us. We understand how you feel when you pooch is not feeling good. That’s why
-                  we exist. Get your four legged animal to visit us onceand we will become friends.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <ul class="list-unstyled d-flex flex-wrap justify-content-center mt__60 dc_btnList-spc_60">
-          <li><a href="#" class="pagebtn dc_btn_min f-w-B">Make an appointment</a></li>
-          <li><a href="#" class="pagebtn pagebtnblue dc_btn_min f-w-B">Get Direction</a></li>
-        </ul>
-      </div>
-    </div>
+<div class="dc_spacer_t_90 dc_spacer_b_60">
+<div class="main-container">
+<div class="row row_gutter_30">
+<div class="col-md-6">
+<div class="dc_About_media_wrap">
+<ul class="list-unstyled row row_gutter_15 dc_wrapCols_UD">
+<li class="col-6"><div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="/assets/images/about-img-1.jpg" alt="" /></div></li>
+<li class="col-6"><div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="/assets/images/about-img-2.jpg" alt="" /></div></li>
+</ul>
+</div>
+</div>
+<div class="col-md-6">
+<div class="dc_txtSummary">
+<h2 class="headingSec line_H_1 mrg-b-30">With Over 30 Years Of Global Experience</h2>
+<div class="dc_txt_summary dc_last_p">
+<p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us onceand we will become friends.</p>
+<p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us. We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us onceand we will become friends.</p>
+</div>
+</div>
+</div>
+</div>
+<ul class="list-unstyled d-flex flex-wrap justify-content-center mt__60 dc_btnList-spc_60">
+<li><a href="#" class="pagebtn dc_btn_min f-w-B">Make an appointment</a></li>
+<li><a href="#" class="pagebtn pagebtnblue dc_btn_min f-w-B">Get Direction</a></li>
+</ul>
+</div>
+</div>
 
 
-    <div class="spacer_t_30 spacer_b_30 bg-white">
-      <div class="main-container">
-        <div class="row rowSpace">
-          <div class="col-md-6 order-md-2">
-            <div class="teamPage_wrap">
-              <img src="./assets/images/team-1.png" class="w-100">
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="aboutDCC_wrap">
-              <div class="dccSubTitle f-w-B opacity-5 mrg-b-30 text-uppercase">
-                FOUNDER & MANAGING DIRECTOR
-              </div>
-              <div class="mrg-b-30 ">
-                <h2 class="f-w-B headingSec line_H_1"> Dr. Vinod Sharma </h2>
-              </div>
-
-              <div class="bannerTxt teamTxt">
-                <p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four
-                  legged animal to visit us onceand we will become friends. </p>
-                <p> We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four
-                  legged animal to visit us. We understand how you feel when you pooch is not feeling good. That’s why
-                  we exist. Get your four legged animal to visit us onceand we will become friends. </p>
-                <p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four
-                  legged animal to visit us onceand we will become friends. </p>
-                <p> We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four
-                  legged animal to visit us. We understand how you feel when you pooch is not feeling good. That’s why
-                  we exist. Get your four legged animal to visit us onceand we will become friends. </p>
-              </div>
-
-            </div>
-          </div>
-
-
-
-
+<div class="spacer_t_30 spacer_b_30 bg-white">
+  <div class="main-container">
+    <div class="row rowSpace">
+      <div class="col-md-6 order-md-2">
+        <div class="teamPage_wrap">
+          <img src="/assets/images/team-1.png" class="w-100">
         </div>
       </div>
-    </div>
-
-    <div class="spacer_t_30 spacer_b_30">
-      <div class="main-container">
-        <div class="row rowSpace">
-          <div class="col-md-6">
-            <div class="teamPage_wrap">
-              <img src="./assets/images/team-1.png" class="w-100">
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="aboutDCC_wrap">
-              <div class="dccSubTitle f-w-B opacity-5 mrg-b-30 text-uppercase">
-                FOUNDER & MANAGING DIRECTOR
-              </div>
-              <div class="mrg-b-30 ">
-                <h2 class="f-w-B headingSec line_H_1"> Dr. Vinod Sharma </h2>
-              </div>
-
-              <div class="bannerTxt teamTxt">
-                <p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four
-                  legged animal to visit us onceand we will become friends. </p>
-                <p> We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four
-                  legged animal to visit us. We understand how you feel when you pooch is not feeling good. That’s why
-                  we exist. Get your four legged animal to visit us onceand we will become friends. </p>
-                <p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four
-                  legged animal to visit us onceand we will become friends. </p>
-                <p> We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four
-                  legged animal to visit us. We understand how you feel when you pooch is not feeling good. That’s why
-                  we exist. Get your four legged animal to visit us onceand we will become friends. </p>
-              </div>
-
-            </div>
-          </div>
-
-
-
-
-        </div>
+      <div class="col-md-6">
+        <div class="aboutDCC_wrap">
+                     <div class="dccSubTitle f-w-B opacity-5 mrg-b-30 text-uppercase">
+                        FOUNDER & MANAGING DIRECTOR
+                     </div>
+                     <div class="mrg-b-30 ">
+                        <h2 class="f-w-B headingSec line_H_1"> Dr. Vinod Sharma  </h2>
+                     </div>
+                     
+                     <div class="bannerTxt teamTxt">
+                        <p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us onceand we will become friends. </p>
+                        <p> We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us. We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us onceand we will become friends. </p>
+                         <p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us onceand we will become friends. </p>
+                        <p> We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us. We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us onceand we will become friends. </p>
+                     </div>
+                     
+                  </div>
       </div>
-    </div>
 
+
+      
+
+    </div>
   </div>
+</div>
+
+<div class="spacer_t_30 spacer_b_30">
+  <div class="main-container">
+    <div class="row rowSpace">
+      <div class="col-md-6">
+        <div class="teamPage_wrap">
+          <img src="/assets/images/team-1.png" class="w-100">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="aboutDCC_wrap">
+                     <div class="dccSubTitle f-w-B opacity-5 mrg-b-30 text-uppercase">
+                        FOUNDER & MANAGING DIRECTOR
+                     </div>
+                     <div class="mrg-b-30 ">
+                        <h2 class="f-w-B headingSec line_H_1"> Dr. Vinod Sharma  </h2>
+                     </div>
+                     
+                     <div class="bannerTxt teamTxt">
+                        <p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us onceand we will become friends. </p>
+                        <p> We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us. We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us onceand we will become friends. </p>
+                         <p>We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us onceand we will become friends. </p>
+                        <p> We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us. We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us onceand we will become friends. </p>
+                     </div>
+                     
+                  </div>
+      </div>
+
+
+      
+
+    </div>
+  </div>
+</div>
+
+</div>
+
